New in 1.24:

* Set the UDP sockets to non-blocking. A bad UDP checksum could cause
  recvfrom/recvmsg to block.
* Try to bind listen sockets to the same portnumber.

New in 1.23:

* Don't assume RPC2_EAI_ errorcodes are identical to the EAI_ errors.
* Fix crash in the mrpc_sendpacketsreliably tracing code when the first
  connection entry does not have an active request buffer allocated.
* Removed RPC2_EAI_NODATA and RPC2_EAI_ADDRFAMILY (RFC3493)

New in 1.22:

* Fixed some small memory leaks in error conditions.
* Keep the size of the host lookup table smaller.

New in 1.21:

* IPv6 support.
* Extra boundary checking when unpacking MultiRPC reply packets.
* Updated for automake 1.7, autoconf 2.52, libtool 1.5.2.

New in 1.20:

* Add /usr/include/rpc2/rpc2_addrinfo.h to the devel packages.
* Set 'ackme' flag on first packet sent during an SFTP retransmission.
  This packet has a higher chance on survival and can confirm already
  received packets and advance the window.
* When responding to a received packet, set the MSG_CONFIRM flag (if it
  is available). On Linux systems this reconfirm that the arp cache
  entry for the destination is valid and as a result avoids the latency
  of the extra(neous) arp request/response before sending the packet.
* Fix bad byte-swap introduced in 1.14 that caused bandwidth/rtt problems.

New in 1.19:

* Cygwin compile fixes (Phil Nelson)
* Replaced some paranoid assertions that triggered when a corrupt multirpc
  packet was received with simply dropping the bogus packets. (Andrew
  Griffiths)

New in 1.18:

* Removed pool allocator for MultiRPC contexts. It had a hardcoded size of
  only 8 contexts and would die on an assertion whenever it got exhausted.
* Merged IPv6 support from Rod Van Meter. This only really deals with IPv6
  compatible addressing and does not handle the fact that IPv6 doesn't do
  ip-level packet fragmentation for us.
* We still accept and return the old HostIdent structures for applications